css/styles-mobile.css
.mobile-visible {
  display: initial;
}

header.main {
  position: static;
}

.logo {
  margin-left: 15px;
}

.btn-hire {
  display: initial;
  position: absolute;
  right: 25px;
  color: rgb(237, 103, 58);
  font-size: 10pt;
  text-transform: uppercase;
  top: 35px;
  font-family: PeaceSans, sans-serif;
  padding: 0;
}

header.menu {
  display: none;
}

section.wrapper {
  padding: 0;
}

section.stripe {
  display: block;
}

.page-home ul.labels {
  width: 70%;
}

.responsive-ul > li {
  width: 100%;
}

.grid > li {
  width: 50%;
}

.mobile-hidden {
  display: none;
}

section.wrapper section {
  display: block !important;
}

.page {
  font-size: 12px;
}

.page h1 {
  font-size: 21pt;
}

.section-title {
  margin: 45px auto 15px;
  text-align: center;
}

.section-description {
  color: rgb(255, 255, 255) !important;
  font-size: 0.9em !important;
  text-transform: uppercase;
}

.page-home {
  max-width: calc(100% - 30px) !important;
}

.page-home ul.labels {
  max-width: 100%;
  margin: 25px 0 0;
  width: 100%;
}

.page-home ul.labels li {
  height: auto;
  padding: 0;
}

.page-home ul.labels li + li {
  margin-top: 30px;
}

.info-container {
  width: 65%;
}

.info-container h3 {
  margin-top: 0;
}

.info-container p {
  margin-bottom: 0;
}

.btn-control-group li {
  width: 46.5%;
  min-width: 46.5%;
  padding: 10px;
  margin-right: 0;
}
.btn-control-group li + li {
  margin-left: 5%;
}

.page .btn {
  font-size: 10pt;
}

